--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <i class="fas fa-music"></i>
                 </div>
                 <div class="music-detail">
-                    <span id="songTitle">heaven.mp3</span>
+                    <span id="songTitle">Heaven</span>
                     <small id="musicStatus">⋆｡°✩ klik play untuk mulai</small>
                 </div>
             </div>
@@ -589,4 +589,5 @@
     </script>
 </body>
 </html>
+
 
