--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 
         <!-- OPSI VALENTINE ANIMASI SUPER REALISTIS -->
         <div class="options">
-            <div id="answerYes" class="answer-card" data-answer="Aku terima kasih dan pesanmu bikin hariku indah! 🌹">
+            <div id="answerYes" class="answer-card" data-answer="Aku terima kasih dan pesanmu bikin aku salting wkwk 🌹">
                 <div class="answer-icon"><i class="fas fa-heart"></i></div>
                 <div class="answer-title">🌹 MAWAR</div>
                 <div class="answer-desc">Bunga mawar untukmu</div>
@@ -1306,3 +1306,4 @@
     </script>
 </body>
 </html>
+
