--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
         </div>
 
         <footer>
-            dibuat dengan cinta · 14 februari · untuk sisil 🤍
+            dibuat dengan cinta untuk sisil 🤍
         </footer>
     </div>
 
@@ -1306,4 +1306,5 @@
     </script>
 </body>
 </html>
+
 
